--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,11 +1,11 @@
 /* Settings */
-@import 'settings/settings.scss';
+@use 'settings/settings.scss';
 
 /* Components */
-@import 'components/base.scss';
-@import 'components/link-cloud.scss';
-@import 'components/header.scss';
-@import 'components/footer.scss';
-@import 'components/teaser.scss';
-@import 'components/animation.scss';
-@import 'components/post.scss';
+@use 'components/base.scss';
+@use 'components/link-cloud.scss';
+@use 'components/header.scss';
+@use 'components/footer.scss';
+@use 'components/teaser.scss';
+@use 'components/animation.scss';
+@use 'components/post.scss';
