--- a/src/css/components/header.scss
+++ b/src/css/components/header.scss
@@ -1,10 +1,12 @@
+@use '../settings' as settings;
+
 .header {
   $header-height: 100px;
 
-  border-bottom: 1px dashed $color-border;
-  background: $color-white;
+  border-bottom: 1px dashed settings.$color-border;
+  background: settings.$color-white;
 
-  @media screen and (min-width: $media-min-small) {
+  @media screen and (min-width: settings.$media-min-small) {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -16,7 +18,7 @@
     width: $header-height;
     margin: 0 auto;
 
-    @media screen and (min-width: $media-min-small) {
+    @media screen and (min-width: settings.$media-min-small) {
       margin: 0 45px 0 0;
     }
 
@@ -55,16 +57,16 @@
       padding: 0 14px;
       display: block;
       text-decoration: none;
-      color: $color-grey-medium;
+      color: settings.$color-grey-medium;
       transition: all .3s;
 
-      @media screen and (min-width: $media-min-small) {
+      @media screen and (min-width: settings.$media-min-small) {
         font-size: 18px;
         line-height: 100px;
       }
 
       &--active {
-        color: $color-black;
+        color: settings.$color-black;
       }
 
       &::before {
@@ -84,19 +86,19 @@
       }
 
       &:nth-child(1)::before {
-        background: $color-yellow;
+        background: settings.$color-yellow;
       }
 
       &:nth-child(2)::before {
-        background: $color-blue;
+        background: settings.$color-blue;
       }
 
       &:nth-child(3)::before {
-        background: $color-green;
+        background: settings.$color-green;
       }
 
       &:nth-child(4)::before {
-        background: $color-orange;
+        background: settings.$color-orange;
       }
 
       &--active {
