--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,9 +3,7 @@
 
 /* Components */
 @use 'components/base.scss';
-@use 'components/link-cloud.scss';
 @use 'components/header.scss';
-@use 'components/footer.scss';
 @use 'components/teaser.scss';
-@use 'components/animation.scss';
-@use 'components/post.scss';
+@use 'components/footer.scss';
+@use 'components/social.scss';
