--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,15 +1,5 @@
-<footer class="footer">
+<footer class="footer container">
     {{ range .Site.Menus.footer }}
         <a class="footer__link" href="{{ .URL }}">{{ .Name }}</a>
     {{ end }}
-
-    <div class="footer__social">
-        {{ range $.Site.Params.social }}
-            {{ if or (eq .name "Twitter") (eq .name "Github") }}
-                <a class="footer__social-icon" href="{{ .url }}">
-                    <img src="/images/{{ .image }}" alt="{{ .title }}">
-                </a>
-            {{ end }}
-        {{ end }}
-    </div>
 </footer>
