--- a/src/css/components/footer.scss
+++ b/src/css/components/footer.scss
@@ -1,36 +1,15 @@
 @use '../settings' as settings;
 
 .footer {
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
   text-align: center;
-  color: settings.$color-red;
-  border-top: 2px dashed;
-  padding: 25px 0 80px;
-  margin: 7rem auto 0;
-  width: 660px;
-  max-width: 90%;
-
-  @media screen and (max-width: settings.$container-width + 20) {
-    width: auto;
-  }
+  padding: 3rem 1rem calc(1rem + env(safe-area-inset-bottom, 0));
 
   &__link {
-    font-size: 14px;
-    color: inherit;
-  }
-
-  &__social {
-    margin-top: 25px;
-
-    &-icon {
-      margin: 0 10px;
-      will-change: transform;
-      transition-property: transform;
-      transition-duration: .15s;
-      display: inline-block;
-
-      &:hover {
-        transform: scale(1.3) rotate(-3deg);
-      }
-    }
+    font-size: .8rem;
+    color: settings.$color-base;
+    font-weight: 400;
   }
 }
