--- a/src/css/components/teaser.scss
+++ b/src/css/components/teaser.scss
@@ -2,134 +2,29 @@
 
 .teaser {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  position: relative;
-  padding: 25px 0;
-  border-bottom: 1px dashed settings.$color-border;
+  gap: 3rem;
 
-  @media screen and (max-width: settings.$media-max-small) {
-    flex-direction: column;
-
-    &--reverse {
-      justify-content: center;
-      flex-direction: column-reverse;
-    }
+  @media (max-width: settings.$breakpoint-md) {
+    flex-direction: column-reverse;
   }
 
-  &:nth-of-type(odd) {
-    background: settings.$color-grey-light;
+  &__text {
+    max-width: 600px;
   }
 
-  &--center {
-    justify-content: center;
-  }
-
-  &--width {
-    &-medium {
-      $teaserPadding: calc((100% - 930px) / 2);
-      padding-left: $teaserPadding;
-      padding-right: $teaserPadding;
-      box-sizing: content-box;
-    }
-  }
-
-  &--height {
-    &-medium {
-      padding-top: 75px;
-      padding-bottom: 75px;
-    }
-
-    &-large {
-      padding-top: 8rem;
-      padding-bottom: 8rem;
+  &__image-wrapper {
+    @media (min-width: settings.$breakpoint-md) and (max-width: settings.$breakpoint-lg) {
+      flex: 0 0 40%;
     }
   }
 
   &__image {
-    display: block;
-    border-radius: 50%;
-    width: 250px;
-    height: auto;
-    margin-bottom: 35px;
+    width: 100%;
 
-    @media screen and (min-width: settings.$media-max-large) {
-      max-width: none;
+    @media (max-width: settings.$breakpoint-md) {
+      max-width: 300px;
     }
-
-    @media screen and (min-width: settings.$media-min-small) {
-      max-width: 35vw;
-      margin-bottom: 0;
-    }
-
-    &--small {
-      width: 200px;
-
-      @media screen and (min-width: settings.$media-min-small) {
-        width: 230px;
-        max-width: 25vw;
-        margin-bottom: 0;
-      }
-    }
-
-    &--portrait {
-      box-shadow: 0 3px 4px 0 rgba(0, 0, 0, .3);
-      height: auto;
-      max-width: none;
-
-      @media screen and (min-width: settings.$media-min-small) {
-        border: 16px solid settings.$color-yellow;
-        width: 285px;
-        margin-left: -40px;
-      }
-    }
-  }
-
-  &__content {
-    padding-right: 0;
-    padding-left: 65px;
-
-    &--reverse {
-      padding-right: 65px;
-      padding-left: 0;
-    }
-
-    @media screen and (max-width: settings.$media-max-small) {
-      padding: 0;
-    }
-  }
-
-  &__headline {
-    font-size: 1.9rem;
-    margin: 0 0 10px;
-
-    @media screen and (max-width: settings.$media-max-large) {
-      font-size: 2.2rem;
-    }
-
-    a {
-      display: inline-block;
-      color: inherit;
-    }
-  }
-
-  &__subheadline {
-    color: settings.$color-grey;
-    font-size: 1.5rem;
-    margin-top: -10px;
-  }
-
-  &__text {
-    margin: 0;
-    font-size: 1.2rem;
-    line-height: 1.4;
-
-    @media screen and (max-width: settings.$media-max-large) {
-      font-size: 1.4rem;
-    }
-  }
-
-  @media screen and (max-width: settings.$media-min-extralarge) {
-    padding-left: 15px;
-    padding-right: 15px;
   }
 }
